bin_PROGRAMS = mtview

INCLUDES=-I$(top_srcdir)/include/

mtview_SOURCES = mtview.c
mtview_LDFLAGS = $(MTDEV_LIBS) $(EVEMU_LIBS) $(FRAME_LIBS) $(X11_LIBS) $(LIBM)

AM_CFLAGS = $(MTDEV_CFLAGS) $(EVEMU_CFLAGS) $(FRAME_CFLAGS) $(X11_CFLAGS)

if HAVE_XI22

AM_CFLAGS += $(XINPUT_CFLAGS)

mtview_LDFLAGS += $(XINPUT_LIBS)

endif
